# OAF_4

./: .codedocs  .travis.yml  CMakeLists.txt  README.md  dok4.docx  in1.txt  in1.txt_out.txt
app/: main.cpp
in/: in2.txt  in3.txt  in5.txt
sampleout/: out3.txt  out4.txt  out5.txt
src/: CMakeLists.txt  maxsearch.hpp
